[metadata]
name = fastapi-gen
version = 1.0.0
description = An app to help generate a fast api template based on user input
author = Levin Mutai
author_email = levinmutai2@gmail.com
url = https://github.com/levin-mutai/fastapi-cli

[options]
packages = find:

[options.packages.find]
exclude = test*

# [options.entry_points]
# console_scripts =
#     fastapi-gen = fastapi-cli.main:run
[console_scripts]
fastapi-gen = fastapi-cli.main:run
